<resources>
    <string name="app_name">Cash Register</string>
    <string name="manager_panel_name">Manager Panel</string>
    <string name="purchase_history_activity_name">Purchase History</string>
    <string name="purchase_details_activity_name">Purchase Details</string>
    <string name="restock_activity_name">Restock</string>
    <string name="product_type">Product Type</string>
    <string name="total_amount">Total</string>
    <string name="button1_text">1</string>
    <string name="button2_text">2</string>
    <string name="button3_text">3</string>
    <string name="button4_text">4</string>
    <string name="button5_text">5</string>
    <string name="button6_text">6</string>
    <string name="button7_text">7</string>
    <string name="button8_text">8</string>
    <string name="button9_text">9</string>
    <string name="buttonClear_text">C</string>
    <string name="button0_text">0</string>
    <string name="manager_button_text">MANAGER</string>
    <string name="buy_button_text">BUY</string>
    <string name="history_button_text">HISTORY</string>
    <string name="restock_button_text">RESTOCK</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="all_fields_required_toast_message">All fields are required</string>
    <string name="out_of_stock_toast_message">No enough quantity in Stock!!</string>
    <string name="thank_you_toast_message">Thank You for your purchase</string>
    <string name="date_format_string">yyyy/MM/dd HH:mm:ss</string>
    <string name="item_name_saved_instance_key">selectedItemName</string>
    <string name="item_quantity_saved_instance_key">selectedQuantity</string>
    <string name="total_amount_saved_instance_key">totalAmount</string>
    <string name="selected_position_extras_key">selectedPosition</string>
</resources>